# BAM2CONS

./: Cargo.toml  README.md
src/: cli.rs  consensus.rs  fasta_writer.rs  lib.rs  main.rs  splice.rs  targets.rs  utils.rs
tests/: splice_seq.rs
