[package]
name = "bam2cons"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
walkdir = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
rust-htslib = "0.47"
itertools = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
